# RailTrail

./: .prettierignore  README.md
Server/: .dockerignore  .env  .env.example  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  DockerFile  Dockerfile  OysterDecoder.py  README.md  docker-compose-dev.yml  docker-compose.prod.yml  docker-compose.yml  jest.config.json  main.py  package-lock.json  package.json  pyproject.toml  startup.sh  tsconfig.json
Server/prisma/: schema.prisma  seed.ts
Server/src/: index.ts  server.ts
Server/src/config/: index.ts
Server/src/controller/: railtrail.router.ts
Server/src/middlewares/: error.middleware.ts  morgan.middleware.ts  prisma.error.ts
Server/src/models/: api.app.ts  api.tracker.ts  api.ts  api.website.ts  api_app.ts  api_types.ts  error.ts  example.ts  index.ts  jsonschemas.app.ts  jsonschemas.tracker.ts  jsonschemas.ts  jsonschemas.website.ts  schema.prisma  tracker.ts  user.ts
Server/src/prisma/: mockPrisma.ts  seed.ts
Server/src/routes/: example.route.ts  index.ts  init.route.ts  login.route.ts  poi.route.ts  poitype.route.ts  track.route.ts  tracker.route.ts  trackupload.route.ts  user.route.ts  users.route.ts  vehicle.route.ts  vehicles.route.ts  vehicletype.route.ts  vehicletypes.route.ts
Server/src/services/: crypto.service.ts  database.service.ts  login.service.ts  poi.service.ts  (+4 more)
vehicle-simulator/: Dockerfile  README.md  pyproject.toml
vehicle-simulator/route/: Daniel_1.gpx  Daniel_2.gpx  Jannis.gpx  Julian.gpx  Kiel.gpx  Liam.gpx  Nico.gpx  Niklas.gpx  route.gpx
vehicle-simulator/src/: main.py
(+239 files in other folders)
