[tool.poetry]
name = "railtrailbackend"
version = "0.1.0"
description = "RailTrail Backend for the REAKT RailTrail System for individual rail transport.."
authors = ["Kieler"]
license = "EPL-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"
pycodestyle = "^2.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
