[tool.poetry]
name = "vehicle-simulator"
version = "0.1.0"
description = ""
authors = ["Nico Biernat <nico.biernat@gmail.com>", "Julian Grabitzky <grabitzkyjulian@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
gpxpy = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
